Clarify test indexing and adjust coding standard